# freader

./: README.md  codemagic.yaml  pubspec.yaml
.github/workflows/: build-ios.yml
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
ios/: ExportOptions.plist  Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/providers/: app_providers.dart  book_providers.dart  book_source_providers.dart  bookmark_providers.dart  intent_providers.dart  llm_providers.dart  local_book_providers.dart  note_providers.dart  search_providers.dart
lib/service/: analyze_url.dart  file_scanner.dart  intent_handler.dart  local_book_opener.dart  local_file_reader.dart  rule_engine.dart  url_utils.dart  web_book.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux/runner/: my_application.cc
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
screens/: 说明.md
test/: widget_test.dart
tool/: check_apk.dart  generate_icon.dart  resize_icon.dart
tool/native/: CMakeLists.txt
tool/native/lzma/: CMakeLists.txt  extract7z.c
tool/native/lzma/build_arm64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
tool/native/lzma/build_armeabi-v7a/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
tool/native/lzma/build_x86_64/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
windows/: CMakeLists.txt
windows/runner/: Runner.rc  (+1 more)
(+142 files in other folders)
